<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.google.cloud.spark.spanner</groupId>
    <artifactId>spark-spanner-lib-parent</artifactId>
    <version>${revision}</version>
    <relativePath>../spark-spanner-lib-parent</relativePath>
  </parent>

  <artifactId>spark-4.0-spanner-lib</artifactId>
  <version>${revision}</version>
  <name>Connector code for spanner DataSource v2 for Spark 4.0</name>
  <properties>
    <arrow.version>18.3.0</arrow.version>
    <spark.version>4.0.1</spark.version>
    <scala.version>2.13</scala.version>
    <netty.version>4.1.118.Final</netty.version>
    <shade.skip>true</shade.skip>
    <toolchain.jdk.version>[17,18)</toolchain.jdk.version>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <dependencies>
    <dependency>
      <groupId>com.google.cloud</groupId>
      <artifactId>google-cloud-dataproc</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.cloud</groupId>
      <artifactId>google-cloud-storage</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>spark-3.1-spanner-lib</artifactId>
      <version>${project.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>spark-3.5-spanner-lib</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies>
  <profiles>
    <profile>
      <id>integration</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <forkCount>10</forkCount>
              <reuseForks>false</reuseForks>
              <includes>
                <include>**/*IntegrationTest.java</include>
              </includes>
              <argLine>
                --add-opens=java.base/java.lang=ALL-UNNAMED
                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                --add-opens=java.base/java.io=ALL-UNNAMED
                --add-opens=java.base/java.net=ALL-UNNAMED
                --add-opens=java.base/java.nio=ALL-UNNAMED
                --add-opens=java.base/java.util=ALL-UNNAMED
                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
                --add-opens=java.base/sun.security.action=ALL-UNNAMED
                --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
                @{argLine}
              </argLine>
              <jdkToolchain>
                <version>${toolchain.jdk.version}</version>
              </jdkToolchain>
            </configuration>
            <executions>
              <execution>
                <id>integration-test</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
              </execution>
              <execution>
                <id>verify</id>
                <goals>
                  <goal>verify</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>
</project>
